@@ -186,6 +186,9 @@ Version 1.5
  - Add Hank HKZW-MS01 Multisensor (Nechry)
  - Add MCOHome MH9-CO2-WD CO2 Monitor (Nechry)
  - Add Aeotec ZW122 Water Sensor 6 (Nechry)
+ - Pull Request #1246 Add GE plug-in 2-outlet smart switch from aaronwolen (Nechry)
+ - Pull Request #1247 Add Leviton DZ15S Switch from bmenchaca (Nechry)
+ - Add Popp: Z-Wave CO Detector (Nechry)
  
 Version 1.4
  - Released 10th Jan, 2016
